# jurisiq

./: .python-version  README.md  app.py  pyproject.toml  requirements.txt
api/: main.py
config/: settings.py
data/: jurisiq.faiss
db/: schema.py
graph/: graph.py  state.py
graph/agents/: judge.py  specialists.py
graph/nodes/: debate.py  inlegalbert_node.py
ingestion/: ingest.py
services/: retrieval.py
